<?xml version="1.0" encoding="UTF-8"?>

<!--
	File: pom.xml

 	DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS HEADER.

	The contents of this file are subject to the terms and conditions of
	the Common Development and Distribution License 1.0 (the "License").

	You may not use this file except in compliance with the License.

	You can obtain a copy of the License by consulting the LICENSE.txt file
	distributed with this file, or by consulting https://oss.oracle.com/licenses/CDDL

	See the License for the specific language governing permissions
	and limitations under the License.

	When distributing the software, include this License Header Notice in each
	file and include the License file LICENSE.txt.

	MODIFICATIONS:
	If applicable, add the following below the License Header, with the fields
	enclosed by brackets [] replaced by your own identifying information:
	"Portions Copyright [year] [name of copyright owner]"
 -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>net.java</groupId>
        <artifactId>jvnet-parent</artifactId>
        <version>4</version>
    </parent>

    <groupId>com.oracle.coherence.hibernate</groupId>
    <artifactId>coherence-hibernate-integration</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <name>coherence-hibernate-integration</name>
    <description>
        The Coherence / Hibernate integration project encompasses the code of integration points
        between Hibernate and Oracle Coherence, currently consisting of a Coherence-based
        integration of the Hibernate second-level cache SPI, and a Hibernate-based implementation
        of the Coherence CacheStore SPI.
    </description>
    <url>http://java.net/projects/cohhib</url>

    <licenses>
        <license>
            <name>Common Development and Distribution License 1.0 ("CDDL")</name>
            <url>http://opensource.org/licenses/CDDL-1.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <developers>
        <developer>
            <name>Randy Stafford</name>
            <organization>Oracle Corporation</organization>
        </developer>
    </developers>

    <modules>
        <module>coherence-hibernate-cache-store</module>
        <module>coherence-hibernate-cache-store-tests</module>
        <module>coherence-hibernate-second-level-cache</module>
        <module>coherence-hibernate-second-level-cache-tests</module>
        <module>coherence-hibernate-site</module>
    </modules>

    <scm>
        <connection>scm:git:https://github.com/coherence-community/coherence-hibernate-integration.git</connection>
        <developerConnection>scm:git:https://github.com/coherence-community/coherence-hibernate-integration.git</developerConnection>
        <url>https://github.com/coherence-community/coherence-hibernate-integration</url>
    </scm>

    <properties>
        <!-- project options -->
        <skip-sign-artifacts>true</skip-sign-artifacts>

        <!-- source encoding definition -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <!-- plugin dependency versions (alphabetically) -->
        <doxia.module.markdown.version>1.0</doxia.module.markdown.version>
        <github.site.maven.plugin.version>0.8</github.site.maven.plugin.version>
        <maven.compiler.plugin.version>2.3.2</maven.compiler.plugin.version>
        <maven.deploy.plugin.version>2.7</maven.deploy.plugin.version>
        <maven.enforcer.plugin.version>1.0.1</maven.enforcer.plugin.version>
        <maven.gpg.plugin.version>1.4</maven.gpg.plugin.version>
        <maven.install.plugin.version>2.4</maven.install.plugin.version>
        <maven.jar.plugin.version>2.4</maven.jar.plugin.version>
        <maven.javadoc.plugin.version>2.9</maven.javadoc.plugin.version>
        <maven.release.plugin.version>2.2.1</maven.release.plugin.version>
        <maven.site.plugin.version>3.2</maven.site.plugin.version>
        <maven.source.plugin.version>2.2.1</maven.source.plugin.version>
        <maven.surefire.plugin.version>2.13</maven.surefire.plugin.version>

        <!-- dependency versions (alphabetically) -->
        <!--<coherence.version>[3.4.2,12.1.3)</coherence.version>-->
        <coherence.version>12.1.2-0-0</coherence.version>
        <!--<hibernate.version>[3.3.1.GA,)</hibernate.version>-->
        <hibernate.version>4.2.4.Final</hibernate.version>
        <junit.version>4.11</junit.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.oracle.coherence</groupId>
                <artifactId>coherence</artifactId>
                <version>${coherence.version}</version>
            </dependency>

            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>${hibernate.version}</version>
            </dependency>

            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>${junit.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <version>${maven.deploy.plugin.version}</version>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${maven.enforcer.plugin.version}</version>
                <executions>
                    <execution>
                        <id>enforce-plugin-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>3.0.4</version>
                                </requireMavenVersion>
                                <requireJavaVersion>
                                    <version>1.6.0</version>
                                </requireJavaVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.plugin.version}</version>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.plugin.version}</version>
                <configuration>
                    <argLine>-Xms800m -Xmx800m -XX:MaxPermSize=500m</argLine>
                    <includes>
                        <include>**/*Test.java</include>
                    </includes>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>${maven.source.plugin.version}</version>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <phase>package</phase>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>${maven.javadoc.plugin.version}</version>
                <configuration>
                    <failOnError>false</failOnError>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-javadocs</id>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-install-plugin</artifactId>
                <version>${maven.install.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <version>${maven.deploy.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-release-plugin</artifactId>
                <version>${maven.release.plugin.version}</version>
                <configuration>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>${maven.gpg.plugin.version}</version>
                <configuration>
                    <skip>${skip-sign-artifacts}</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>

    </build>

    <profiles>
        <profile>
            <id>coherence_version_3.7.1</id>
            <properties>
                <coherence.version>[3.7.1,12.1.2)</coherence.version>
            </properties>
        </profile>
        <profile>
            <id>coherence_version_3.7.1.7</id>
            <properties>
                <coherence.version>3.7.1.7</coherence.version>
            </properties>
        </profile>
        <profile>
            <id>coherence_version_3.7.1.9</id>
            <properties>
                <coherence.version>3.7.1.9</coherence.version>
            </properties>
        </profile>
        <profile>
            <id>coherence_version_12.1.2-0-0</id>
            <properties>
                <coherence.version>12.1.2-0-0</coherence.version>
            </properties>
        </profile>
        <profile>
            <id>hibernate_version_4.2.0.Final</id>
            <properties>
                <hibernate.version>4.2.0.Final</hibernate.version>
            </properties>
        </profile>
        <profile>
            <id>hibernate_version_4.2.4.Final</id>
            <properties>
                <hibernate.version>4.2.4.Final</hibernate.version>
            </properties>
        </profile>
    </profiles>

</project>